message Thrift2Pb
{
    required string  thrift_interface_name       = 1;      ///< thrift client 请求后台服务的rpc 接口名
    required int32   thrift_seq                  = 2;      ///< thrift client 每次请求的序列号
    optional bytes   thrift_req_params           = 3;      ///< thrift req params in interface.
    optional bytes   thrift_rsp_params           = 4;      ///< thrift resp param for interface
}
